--- a/goViral/index.html
+++ b/goViral/index.html
@@ -133,7 +133,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
-			<p class="main-title bhf-hidden" itemprop="headline"><a href="https://kitpro.site/fluxco" title="Fluxco" rel="home">Fluxco</a></p>
+			<p class="main-title bhf-hidden" itemprop="headline"><a href="https://kitpro.site/fluxco" title="Fluxco" rel="home">Go Viral</a></p>
 					<div data-elementor-type="wp-post" data-elementor-id="299" class="elementor elementor-299">
 				<div class="elementor-element elementor-element-142a61f e-flex e-con-boxed e-con e-parent" data-id="142a61f" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;gradient&quot;}">
 					<div class="e-con-inner">
@@ -235,7 +235,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		<div class="elementor-element elementor-element-2efa94ed e-con-full e-flex e-con e-child" data-id="2efa94ed" data-element_type="container">
 				<div class="elementor-element elementor-element-8d62ef2 elementor-invisible elementor-widget elementor-widget-text-editor" data-id="8d62ef2" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>						</div>
+							<p>Go Viral is the top digital marketing agency in Malaysia, delivering user-friendly, results-driven websites and marketing strategies since 2008. To help your business thrive online, we are here to provide comprehensive website solutions. From SEO and PPC to e-commerce growth, we help businesses scale fast. Unlock your brand’s full potential with our expert strategies. Let’s Go Viral and take your business to the next level!
+</p>						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-6f9b25b e-con-full e-flex e-con e-child" data-id="6f9b25b" data-element_type="container">
